--- a/client/wrangler.jsonc
+++ b/client/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "chat-as-a-service-client",
+  "name": "chat-service",
   "compatibility_date": "2026-01-12",
   "assets": {
     "directory": "./dist"
