--- a/client/wrangler.jsonc
+++ b/client/wrangler.jsonc
@@ -2,6 +2,7 @@
   "name": "chat-service",
   "compatibility_date": "2026-01-12",
   "assets": {
-    "directory": "./dist"
+    "directory": "./dist",
+    "not_found_handling": "single-page-application"
   }
 }
